@@ -110,7 +110,8 @@ Cacti CHANGELOG
 -issue#5754: Installer replication loop for. Plugin realms
 -issue#5759: Remote poller attempts to sync with other pollers during install
 -issue#5768: Cacti does not properly escape Data Query indexes that include a space
--issue#5772: Login log message unification - add client IP adress
+-issue#5771: Boost does not always order data source records properly
+-issue#5772: Login log message unification - add client IP address
 -issue#5773: Update rrd.php missing variable $okpos
 -issue#5777: The Export .CSV only includes the 1st line of Notes
 -issue#5780: Undefined array key "default" in file html_form.php
